--- a/time/pages/schedule/schedule.wxml
+++ b/time/pages/schedule/schedule.wxml
@@ -1,6 +1,8 @@
 <view>
   <swiper>
-   
+    <block wx:for="{{timeArr}}">
+      <swiper-item data-id="{{item.id}}" bindtap="onScheduleInfo" >{{item.title}} -- {{item.create_time}}</swiper-item>
+    </block> 
   </swiper>
-  <view>111</view>
+  <view></view>
 </view>
