--- a/time/pages/note/note.wxml
+++ b/time/pages/note/note.wxml
@@ -1,8 +1,19 @@
-<view>
-  <swiper>
-    <block wx:for="{{timeArr}}">
-      <swiper-item data-id="{{item.id}}" data-title="{{item.title}}" bindtap="onNoteInfo" >{{item.title}} -- {{item.create_time}}</swiper-item>
-    </block> 
-  </swiper>
-  <view></view>
+<view class="list-touch" wx:for="{{items}}" wx:key="">
+
+  <view class='list-touch-checkBox'>
+    <checkbox-group bindchange="checkboxChange" data-index="{{index}}" data-checks="{{item.checks}}">
+        <checkbox data-index="{{index}}" value="{{item.id}}" checked="{{item.checks}}"/>
+    </checkbox-group> 
+  </view>
+  <view class="list-touch-content">
+    <view class="touch-item {{item.isTouchMove ? 'touch-move-active' : ''}}" data-index="{{index}}" bindtouchstart="touchstart" bindtouchmove="touchmove">
+      <view class="content" data-id="{{item.id}}" data-title="{{item.title}}"  bindtap="onNoteInfo">{{item.title}}</view>
+      <view class="list-top"  data-index="{{index}}">删除</view>
+      <view class="del" catchtap="del" data-index="{{index}}">删除</view>
+    </view>
+  </view>
+
 </view>
+
+
+
