--- a/time/pages/my/my.wxml
+++ b/time/pages/my/my.wxml
@@ -1,2 +1,13 @@
+<view>
 
+  <view>
+    <image src='{{userInfo.avatarUrl}}'></image>
+    <text>{{userInfo.nickName}}</text>
+  </view>
+
+
+
+</view>
+
+<!-- <loading hidden="{{loadingHidden}}">加载中……</loading> -->
 
