--- a/time/pages/my/my.wxml
+++ b/time/pages/my/my.wxml
@@ -1,13 +1,12 @@
-<view>
 
-  <view>
-    <image src='{{userInfo.avatarUrl}}'></image>
-    <text>{{userInfo.nickName}}</text>
-  </view>
-
-
-
+<view class="page">
+    <view class="userinfo">
+			<image class="userinfo-avatar fl_l" src="{{userInfo.avatarUrl}}" background-size="cover"></image>
+			<text class="fl_l">{{userInfo.nickName}}</text>
+    </view>
 </view>
 
-<!-- <loading hidden="{{loadingHidden}}">加载中……</loading> -->
+
+
+
 
