--- a/time/pages/noteAdd/noteAdd.wxml
+++ b/time/pages/noteAdd/noteAdd.wxml
@@ -1,58 +1,65 @@
 <view class="page" >
-  
+
+  <form bindsubmit="formSubmit" bindreset="formReset">  
+
     <view class="page__bd">
-        <view class="weui-toptips weui-toptips_warn" wx:if="{{showTopTips}}">错误提示</view>
 
-        <view class="weui-cells weui-cells_after-title">
-            <view class="weui-cell weui-cell_input">
-                <view class="weui-cell__hd">
-                    <view class="weui-label">标题</view>
-                </view>
-                <view class="weui-cell__bd">
-                    <input class="weui-input" placeholder="请输入标题"/>
-                </view>
+      <view class="weui-cells weui-cells_after-title">
+
+        <view class="weui-cell weui-cell_input">
+            <view class="weui-cell__hd">
+                <view class="weui-label">标题</view>
             </view>
-            
-            <view class="weui-cell weui-cell_input">
-                <view class="weui-cell__hd">
-                    <view class="weui-label">日期</view>
-                </view>
-                <view class="weui-cell__bd">
-                    <picker mode="date" value="{{date}}" start="2015-09-01" end="2017-09-01" bindchange="bindDateChange">
-                        <view class="weui-input">{{date}}</view>
-                    </picker>
-                </view>
-            </view>
-            <view class="weui-cell weui-cell_input">
-                <view class="weui-cell__hd">
-                    <view class="weui-label">时间</view>
-                </view>
-                <view class="weui-cell__bd">
-                    <picker mode="time" value="{{time}}" start="09:01" end="21:01" bindchange="bindTimeChange">
-                        <view class="weui-input">{{time}}</view>
-                    </picker>
-                </view>
-            </view>
-        </view>
-    
-        <view class="weui-cells__title">文本域</view>
-        <view class="weui-cells weui-cells_after-title">
-            <view class="weui-cell">
-                <view class="weui-cell__bd">
-                    <textarea class="weui-textarea" placeholder="请输入文本" style="height: 3.3em" />
-                    <view class="weui-textarea-counter">0/200</view>
-                </view>
+            <view class="weui-cell__bd">
+                <input class="weui-input" name="title" value='{{title}}' />
             </view>
         </view>
 
+        <view class="weui-cell weui-cell_input">
+            <view class="weui-cell__hd">
+                <view class="weui-label">分类</view>
+            </view>
+            <view class="weui-cell__bd">
+              <picker  range="{{group}}" value="{{group_num}}" bindchange="bindGroupChange">
+                <view class="weui-input">
+                   <input class='weui-input' type="hidden" disabled="true" name="group" value="{{group[group_num]}}" /> 
+                  <!-- <input class='weui-input' type="hidden" disabled="true" name="group" value="{{group_num}}" /> -->
+                </view>
+              </picker>
+            </view>
+        </view>
+              
+        <view class="weui-cell weui-cell_input">
+            <view class="weui-cell__hd">
+                <view class="weui-label">截止日期</view>
+            </view>
+            <view class="weui-cell__bd">
+                <picker mode="date" value="{{date}}"  bindchange="bindDateChange">
+                    <view class="weui-input">
+                      <input class='weui-input' type="hidden" disabled="true" name="date" value=" {{date}}" />
+                    </view>
+                </picker>
+            </view>
+        </view>
+              
+      </view>
       
+      <view class="weui-cells__title">内容</view>
 
-       
+      <view class="weui-cells weui-cells_after-title">
+          <view class="weui-cell">
+              <view class="weui-cell__bd">
+                  <textarea class="weui-textarea" placeholder="请输入文本" value='{{content}}' name="content" style="height: 15em" />
+              </view>
+          </view>
+      </view>
 
-      
+      <view class="weui-btn-area">
+          <button class="weui-btn" type="primary" formType="submit">确定</button>
+      </view>
 
-        <view class="weui-btn-area">
-            <button class="weui-btn" type="primary" bindtap="showTopTips">确定</button>
-        </view>
     </view>
+
+  </form>
+    
 </view>
