--- a/time/app.wxss
+++ b/time/app.wxss
@@ -91,6 +91,16 @@ page{
   width: 80px;
   float: left;
 }
+.goTopF{
+  background-color: #dddddd;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  line-height: 44px;
+  animation-iteration-count: center;
+  width: 80px;
+  float: left;
+}
 .del{
   background-color: orangered;
   display: flex;
